--- a/notebooks/dataset_converter.ipynb
+++ b/notebooks/dataset_converter.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +369,7 @@
        "[107 rows x 4861 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,13 +377,20 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_values = pd.read_csv('hepatotoxicity_pTD50_KlekFP_ready_set.csv', header=1)\n",
+    "df_values = pd.read_csv('../data/hepatotoxicity_pTD50_KlekFP_ready_set.csv', header=1)\n",
     "df_values\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Look at first column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +410,7 @@
        "Name: Unnamed: 0, Length: 107, dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +421,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete NaN values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +735,7 @@
        "53        0.93"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,6 +2279,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert correct values at first column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -2444,12 +2472,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save to file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_after_drop.to_csv(\"hepatotoxicity_pTD50_KlekFP_ready_set_after_conversion.csv\", index = False)"
+    "df_after_drop.to_csv(\"../data/hepatotoxicity_pTD50_KlekFP_ready_set_after_conversion.csv\", index = False)"
    ]
   },
   {
