--- a/notebooks/data_preprocessing_and_analyst.ipynb
+++ b/notebooks/data_preprocessing_and_analyst.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fd4f753c",
+   "metadata": {},
+   "source": [
+    "### Preprocessing data and analyst"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "742be11c",
+   "execution_count": null,
+   "id": "2a27c78f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "id": "72710833",
    "metadata": {},
    "outputs": [],
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "id": "eb7196c6",
    "metadata": {},
    "outputs": [
@@ -223,7 +231,7 @@
        "[5 rows x 4861 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "id": "b7f2a17c",
    "metadata": {},
    "outputs": [
@@ -256,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "id": "3a53fafa",
    "metadata": {},
    "outputs": [
@@ -536,7 +544,7 @@
        "[8 rows x 4861 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 103,
    "id": "d7e4b95c",
    "metadata": {},
    "outputs": [],
@@ -557,8 +565,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27ccc5c3",
+   "metadata": {},
+   "source": [
+    "### Minimal value in row w/o ALT's"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 104,
    "id": "57a8d321",
    "metadata": {},
    "outputs": [
@@ -568,7 +584,7 @@
        "30.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,8 +594,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "000a8317",
+   "metadata": {},
+   "source": [
+    "### Minimal values in column w/o ALT's "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
    "id": "00c9b743",
    "metadata": {},
    "outputs": [
@@ -589,7 +613,7 @@
        "0.0"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 106,
    "id": "81f97b91",
    "metadata": {},
    "outputs": [
@@ -624,24 +648,24 @@
     }
    ],
    "source": [
-    "sum_row = df[columns].sum(axis=0)\n",
-    "print (sum_row)"
+    "sum_col = df[columns].sum(axis=0)\n",
+    "print (sum_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "5904a15f",
+   "execution_count": 107,
+   "id": "bf8b9745",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_rows = list(dict((k, v) for (k, v) in sum_row.items() if v == 0.0).keys())"
+    "zero_col = list(dict((k, v) for (k, v) in sum_col.items() if v == 0.0).keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "12293d67",
+   "execution_count": 108,
+   "id": "a08529b3",
    "metadata": {},
    "outputs": [
     {
@@ -650,29 +674,37 @@
        "4461"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(zero_rows)"
+    "len(zero_col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8894d7cf",
+   "metadata": {},
+   "source": [
+    "### Delete zero columns from dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "036f8d60",
+   "execution_count": 109,
+   "id": "b0539348",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=zero_rows, inplace=True)"
+    "df.drop(columns=zero_col, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "0bedfb40",
+   "execution_count": 110,
+   "id": "283144ce",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +902,7 @@
        "[5 rows x 400 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,8 +913,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "7f842f6c",
+   "execution_count": 111,
+   "id": "4830f4a3",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +923,7 @@
        "<AxesSubplot:xlabel='ALT', ylabel='Count'>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -914,9 +946,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bd609ce",
+   "metadata": {},
+   "source": [
+    "### Map all values from ALT's column by log"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "559c9fb6",
+   "execution_count": 112,
+   "id": "17977278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,8 +965,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "4fff881e",
+   "execution_count": 113,
+   "id": "49ede0c0",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +975,7 @@
        "<AxesSubplot:xlabel='ALT', ylabel='Count'>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -959,8 +999,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "97e704ce",
+   "execution_count": 114,
+   "id": "b8364042",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1009,7 @@
        "0.412109650826833"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,8 +1020,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "2e906b73",
+   "execution_count": 115,
+   "id": "fe8531b8",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1030,7 @@
        "5.60947179518496"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,9 +1040,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53dfb327",
+   "metadata": {},
+   "source": [
+    "### Save to file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "dbd3f934",
+   "execution_count": 116,
+   "id": "f8348efb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793b4518",
+   "id": "990c003f",
    "metadata": {},
    "outputs": [],
    "source": []
