--- a/notebooks/data_preprocessing_and_analyst.ipynb
+++ b/notebooks/data_preprocessing_and_analyst.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "2a27c78f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 119,
    "id": "72710833",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 120,
    "id": "eb7196c6",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[5 rows x 4861 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "id": "b7f2a17c",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 122,
    "id": "3a53fafa",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "[8 rows x 4861 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 123,
    "id": "d7e4b95c",
    "metadata": {},
    "outputs": [],
@@ -569,12 +569,12 @@
    "id": "27ccc5c3",
    "metadata": {},
    "source": [
-    "### Minimal value in row w/o ALT's"
+    "### Min and max values in row w/o ALT's"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 124,
    "id": "57a8d321",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "30.0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,11 +594,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "7dd1e1bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128.0"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[columns].sum(axis=1).max()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "000a8317",
    "metadata": {},
    "source": [
-    "### Minimal values in column w/o ALT's "
+    "### Min and max values in column w/o ALT's "
    ]
   },
   {
@@ -624,7 +645,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 126,
+   "id": "db14698f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98.0"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[columns].sum(axis=0).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "id": "81f97b91",
    "metadata": {},
    "outputs": [
@@ -654,17 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 131,
    "id": "bf8b9745",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_col = list(dict((k, v) for (k, v) in sum_col.items() if v == 0.0).keys())"
+    "zeros_col = list(dict((k, v) for (k, v) in sum_col.items() if v == 0.0).keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "id": "a08529b3",
    "metadata": {},
    "outputs": [
@@ -674,13 +716,45 @@
        "4461"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(zero_col)"
+    "len(zeros_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "4b2069a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_rows=98\n",
+    "ones_col = list(dict((k, v) for (k, v) in sum_col.items() if v == number_of_rows).keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "7bf38d3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['KRFP2975']"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ones_col"
    ]
   },
   {
@@ -688,22 +762,40 @@
    "id": "8894d7cf",
    "metadata": {},
    "source": [
-    "### Delete zero columns from dataframe"
+    "### Delete zeros columns from dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 138,
    "id": "b0539348",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=zero_col, inplace=True)"
+    "df.drop(columns=zeros_col, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6920b74a",
+   "metadata": {},
+   "source": [
+    "### Delete ones columns from dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 139,
+   "id": "a261565e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=ones_col, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "id": "283144ce",
    "metadata": {},
    "outputs": [
@@ -874,7 +966,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 400 columns</p>\n",
+       "<p>5 rows × 399 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -899,10 +991,10 @@
        "3       0.0       1.0       1.0       1.0  \n",
        "4       0.0       0.0       0.0       0.0  \n",
        "\n",
-       "[5 rows x 400 columns]"
+       "[5 rows x 399 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 141,
    "id": "4830f4a3",
    "metadata": {},
    "outputs": [
@@ -923,7 +1015,7 @@
        "<AxesSubplot:xlabel='ALT', ylabel='Count'>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -955,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 142,
    "id": "17977278",
    "metadata": {},
    "outputs": [],
@@ -965,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 143,
    "id": "49ede0c0",
    "metadata": {},
    "outputs": [
@@ -975,7 +1067,7 @@
        "<AxesSubplot:xlabel='ALT', ylabel='Count'>"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -999,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 144,
    "id": "b8364042",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1101,7 @@
        "0.412109650826833"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 145,
    "id": "fe8531b8",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1122,7 @@
        "5.60947179518496"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 146,
    "id": "f8348efb",
    "metadata": {},
    "outputs": [],
