--- a/notebooks/params_from_cv_results.ipynb
+++ b/notebooks/params_from_cv_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64cd4810",
+   "id": "4dd1719c",
    "metadata": {},
    "source": [
     "### cv_results for SVR"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "6bcda9a3",
+   "execution_count": 289,
+   "id": "fd1cf254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "da315f0c",
+   "execution_count": 290,
+   "id": "48ac8bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "fab5d2fd",
+   "execution_count": 291,
+   "id": "4f59d3cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_result(df, model_name):\n",
-    "    max_rank=xd['rank_test_score'].idxmax()\n",
+    "    max_mean=xd['mean_test_score'].idxmax()\n",
     "    min_std=xd['std_test_score'].idxmin()\n",
     "    max_rank=xd['rank_test_score'].idxmax()\n",
     "    results.append({'model' : model_name, 'max_mean_test_score' : max_mean, 'min_std_test_score': min_std, 'max_rank_test_score': max_rank})"
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "1fa3e4b3",
+   "execution_count": 292,
+   "id": "c27a08af",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "       'rank_test_score'], dtype=object)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "eb2b1428",
+   "execution_count": 293,
+   "id": "b5ba096f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "7fc3482a",
+   "execution_count": 294,
+   "id": "a053278d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "8f4410f7",
+   "execution_count": 295,
+   "id": "383b9bc9",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[2640 rows x 3 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "dceb2ee2",
+   "execution_count": 296,
+   "id": "0c50d89a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,8 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "a8a512fc",
+   "execution_count": 297,
+   "id": "6bdec727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a152cdbd",
+   "id": "0159c6b1",
    "metadata": {},
    "source": [
     "### cv_results for Lasso"
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "cdad1859",
+   "execution_count": 298,
+   "id": "47f68d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,8 +321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "71c89543",
+   "execution_count": 299,
+   "id": "1ca8f64b",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "       'rank_test_score'], dtype=object)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "68f5af9b",
+   "execution_count": 300,
+   "id": "041852bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "3d6346b9",
+   "execution_count": 301,
+   "id": "5be152f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,8 +368,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "37401e0d",
+   "execution_count": 302,
+   "id": "e158ae3b",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "1.000              -0.074849        0.068368             29.8"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,8 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "759b74ad",
+   "execution_count": 303,
+   "id": "80a110aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,8 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "c736ed67",
+   "execution_count": 304,
+   "id": "4c14cd72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8433b5e9",
+   "id": "72ca9148",
    "metadata": {},
    "source": [
     "### cv_results for SGDRegressor"
@@ -502,8 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "be8b9bf0",
+   "execution_count": 305,
+   "id": "94896c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "115f6ce7",
+   "execution_count": 306,
+   "id": "d05cc911",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "96662ca8",
+   "execution_count": 307,
+   "id": "65873504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,8 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "194dc30f",
+   "execution_count": 308,
+   "id": "46c34584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,8 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "c6ce50b3",
+   "execution_count": 309,
+   "id": "42e42459",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "            optimal                    63.500000  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,8 +747,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "48b6bfc2",
+   "execution_count": 310,
+   "id": "0d7f503a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,8 +757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "id": "a0f71363",
+   "execution_count": 311,
+   "id": "1053bfda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8212bac",
+   "id": "ad5a041e",
    "metadata": {},
    "source": [
     "### cv_results for LinearRegressor"
@@ -775,8 +775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "d4684697",
+   "execution_count": 312,
+   "id": "9ec3fc83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,8 +785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "9c9c3afe",
+   "execution_count": 313,
+   "id": "b246e11f",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,8 +812,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "084ca7e7",
+   "execution_count": 314,
+   "id": "706864ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,8 +822,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "17208950",
+   "execution_count": 315,
+   "id": "d30af2d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,8 +834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "a6a7383f",
+   "execution_count": 316,
+   "id": "ec0a9326",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,8 +844,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "682bea72",
+   "execution_count": 317,
+   "id": "dd4bae9e",
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "0    -4.150485e+25    5.480480e+25              1.0"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,8 +901,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "ed435e71",
+   "execution_count": 318,
+   "id": "5093c9a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,8 +911,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "7a96cdb9",
+   "execution_count": 319,
+   "id": "daf08f7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,8 +921,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "ee59a8a9",
+   "execution_count": 320,
+   "id": "4787a047",
    "metadata": {},
    "outputs": [
     {
@@ -963,21 +963,21 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Lasso</td>\n",
-       "      <td>(0.1, 0.01, 3, auto, linear, 1e-05)</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SGDRegressor</td>\n",
-       "      <td>(0.1, 0.01, 3, auto, linear, 1e-05)</td>\n",
+       "      <td>(0.0, invscaling)</td>\n",
        "      <td>(0.001, invscaling)</td>\n",
        "      <td>(0.0, optimal)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>LinearRegressor</td>\n",
-       "      <td>(0.1, 0.01, 3, auto, linear, 1e-05)</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -988,9 +988,9 @@
       "text/plain": [
        "             model                  max_mean_test_score  \\\n",
        "0              SVR  (0.1, 0.01, 3, auto, linear, 1e-05)   \n",
-       "1            Lasso  (0.1, 0.01, 3, auto, linear, 1e-05)   \n",
-       "2     SGDRegressor  (0.1, 0.01, 3, auto, linear, 1e-05)   \n",
-       "3  LinearRegressor  (0.1, 0.01, 3, auto, linear, 1e-05)   \n",
+       "1            Lasso                                 0.01   \n",
+       "2     SGDRegressor                    (0.0, invscaling)   \n",
+       "3  LinearRegressor                                    0   \n",
        "\n",
        "                      min_std_test_score  \\\n",
        "0  (0.0001, 10.0, 3, auto, sigmoid, 0.1)   \n",
@@ -1005,7 +1005,7 @@
        "3                                      0  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
