--- a/notebooks/explanations_results.ipynb
+++ b/notebooks/explanations_results.ipynb
@@ -65,7 +65,7 @@
     "    plt.figure(figsize=(14, 6))\n",
     "    plt.plot(x, np.expm1(y_test), 'ro', label=\"y-origin\")\n",
     "    plt.plot(x, np.expm1(y_pred_test), 'go', label=\"y-predicted\")\n",
-    "    plt.suptitle(f\"R2 ACCURACY = {result}\")\n",
+    "    plt.suptitle(\"r^2 score: \" + result)\n",
     "    plt.title(\"Statistics\")\n",
     "    plt.ylabel(\"Predictions\")\n",
     "    plt.grid()\n",
@@ -214,7 +214,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "for i in [2, 8, 15]:\n",
-    "    exp = explainer.explain_instance(x_test[i], loaded_model.predict,\n",
+    "    exp = explainer.explain_instance(x_test[i], model.predict,\n",
     "            num_features=15)\n",
     "    exp.as_pyplot_figure()\n",
     "    plt.tight_layout()"
@@ -2232,12 +2232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "29931377",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unimportant_bits = set([expl[0] for l in explonations for expl in l[-10:] if expl[1] == 0.0])\n",
+    "unimportant_bits = set([expl[0] for l in explonations for expl in l[-10:]])\n",
     "important_bits = set([expl[0] for l in explonations for expl in l[:10]])"
    ]
   },
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "940b8783",
    "metadata": {},
    "outputs": [
@@ -2283,53 +2283,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>KRFP1750 &lt;= 0.00</td>\n",
+       "      <td>KRFP1524 &lt;= 0.00</td>\n",
        "      <td>KRFP4142 &lt;= 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>KRFP852 &lt;= 0.00</td>\n",
+       "      <td>KRFP670 &lt;= 0.00</td>\n",
        "      <td>KRFP1799 &lt;= 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>KRFP1524 &lt;= 0.00</td>\n",
-       "      <td>KRFP1566 &gt; 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>KRFP670 &lt;= 0.00</td>\n",
-       "      <td>KRFP2988 &lt;= 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>KRFP3177 &lt;= 0.00</td>\n",
-       "      <td>KRFP4852 &gt; 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>KRFP232 &lt;= 1.00</td>\n",
        "      <td>KRFP2716 &lt;= 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>KRFP3915 &lt;= 0.00</td>\n",
-       "      <td>KRFP4142 &gt; 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>KRFP55 &lt;= 0.00</td>\n",
+       "      <th>3</th>\n",
+       "      <td>KRFP232 &lt;= 1.00</td>\n",
        "      <td>KRFP1707 &lt;= 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>4</th>\n",
+       "      <td>KRFP3915 &lt;= 0.00</td>\n",
+       "      <td>KRFP4810 &lt;= 0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KRFP2428 &lt;= 0.00</td>\n",
+       "      <td>KRFP1566 &lt;= 0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>KRFP1799 &lt;= 0.00</td>\n",
+       "      <td>KRFP3285 &lt;= 0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>KRFP3222 &lt;= 1.00</td>\n",
-       "      <td>KRFP4836 &gt; 0.00</td>\n",
+       "      <td>KRFP2882 &lt;= 0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>KRFP2714 &lt;= 0.00</td>\n",
+       "      <td>KRFP4015 &lt;= 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>KRFP2714 &lt;= 0.00</td>\n",
-       "      <td>KRFP4295 &gt; 0.00</td>\n",
+       "      <td>KRFP2306 &lt;= 0.00</td>\n",
+       "      <td>KRFP3010 &lt;= 0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2337,19 +2337,19 @@
       ],
       "text/plain": [
        "   unimportant_bits    important_bits\n",
-       "0  KRFP1750 <= 0.00  KRFP4142 <= 0.00\n",
-       "1   KRFP852 <= 0.00  KRFP1799 <= 0.00\n",
-       "2  KRFP1524 <= 0.00   KRFP1566 > 0.00\n",
-       "3   KRFP670 <= 0.00  KRFP2988 <= 0.00\n",
-       "4  KRFP3177 <= 0.00   KRFP4852 > 0.00\n",
-       "5   KRFP232 <= 1.00  KRFP2716 <= 0.00\n",
-       "6  KRFP3915 <= 0.00   KRFP4142 > 0.00\n",
-       "7    KRFP55 <= 0.00  KRFP1707 <= 0.00\n",
-       "8  KRFP3222 <= 1.00   KRFP4836 > 0.00\n",
-       "9  KRFP2714 <= 0.00   KRFP4295 > 0.00"
+       "0  KRFP1524 <= 0.00  KRFP4142 <= 0.00\n",
+       "1   KRFP670 <= 0.00  KRFP1799 <= 0.00\n",
+       "2  KRFP3177 <= 0.00  KRFP2716 <= 0.00\n",
+       "3   KRFP232 <= 1.00  KRFP1707 <= 0.00\n",
+       "4  KRFP3915 <= 0.00  KRFP4810 <= 0.00\n",
+       "5  KRFP2428 <= 0.00  KRFP1566 <= 0.00\n",
+       "6  KRFP1799 <= 0.00  KRFP3285 <= 0.00\n",
+       "7  KRFP3222 <= 1.00  KRFP2882 <= 0.00\n",
+       "8  KRFP2714 <= 0.00  KRFP4015 <= 0.00\n",
+       "9  KRFP2306 <= 0.00  KRFP3010 <= 0.00"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
